<resources>
    <string name="app_name">Signage</string>
    <string name="network_error">네트워크 연결 또는 서버 상태를 확인하세요.</string>
    <string name="vital_sign">vital sign</string>
    <string name="main_top_text">비대면 스마트 문진서비스</string>
    <string name="step_1">Step 1. 설명</string>
    <string name="step_2">Step 2. 비대면 문진</string>
    <string name="step_3">Step 3. 측정 결과</string>
    <string name="start_text_1">비대면 음성문진 </string>
    <string name="start_text_2"> 시작합니다.</string>
    <string name="start_button">시작하기</string>
    <string name="bot_name">스마트 사이니지</string>
    <string name="user_name">사용자(나)</string>
    <string name="sensor_title">비대면 스마트 측정</string>
    <string name="temperature">체온</string>
    <string name="respiration">호흡</string>
    <string name="heart_rate">심박</string>
    <string name="symptoms_text_1">이상증상 발견</string>
    <string name="symptoms_text_2">다음 화면 QR code를 확인해주세요.</string>
    <string name="result_abnormal_text_1">이상증상 발견</string>
    <string name="result_normal_text_1">정상</string>
    <string name="result_normal_text_2">문진이 종료되었습니다.\n현재 코로나가 의심될 만한 사항은 없습니다.</string>
    <string name="result_normal_text_3">코로나19 감염확산 예방법</string>
    <string name="result_normal_text_4">마스크를\n착용하세요</string>
    <string name="result_normal_text_5">손을 깨끗히\n자주 씻으세요</string>
    <string name="result_normal_text_6">거리두기를\n생활화하세요.</string>
    <string name="result_normal_text_7">마스크를 착용하고 감염확산 방지에 동참해 주세요.\n감사합니다.</string>
    <string name="result_abnormal_qr_text_1">코로나19 선별진료소\n안내 QR Code</string>
    <string name="result_scan_qr">Scan QR Code</string>

    <string name="content_description"> </string>
</resources>