<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/step_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white70">

        <ImageView
            android:id="@+id/ic_step_1"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginStart="65dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintBottom_toTopOf="@+id/text_step_1"
            app:layout_constraintEnd_toStartOf="@+id/ic_step_2"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/ic_step_selected" />

        <TextView
            android:id="@+id/text_step_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ic_step_1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ic_step_1"
            app:layout_constraintTop_toBottomOf="@+id/ic_step_1" />

        <View
            android:id="@+id/line_step_1_2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_step_1"
            app:layout_constraintEnd_toStartOf="@+id/ic_step_2"
            app:layout_constraintStart_toEndOf="@+id/ic_step_1"
            app:layout_constraintTop_toTopOf="@+id/ic_step_1"
            tools:background="@color/blue" />

        <ImageView
            android:id="@+id/ic_step_2"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintBottom_toTopOf="@+id/text_step_2"
            app:layout_constraintEnd_toStartOf="@+id/ic_step_3"
            app:layout_constraintStart_toEndOf="@+id/ic_step_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/ic_step_selected" />

        <TextView
            android:id="@+id/text_step_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ic_step_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ic_step_2"
            app:layout_constraintTop_toBottomOf="@+id/ic_step_2"
            tools:textColor="@color/dark_grey_blue"
            tools:textStyle="bold" />

        <View
            android:id="@+id/line_step_2_3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/ic_step_2"
            app:layout_constraintEnd_toStartOf="@+id/ic_step_3"
            app:layout_constraintStart_toEndOf="@+id/ic_step_2"
            app:layout_constraintTop_toTopOf="@+id/ic_step_2"
            tools:background="@color/pale_lilac" />

        <ImageView
            android:id="@+id/ic_step_3"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/content_description"
            app:layout_constraintBottom_toTopOf="@+id/text_step_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ic_step_2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:src="@drawable/ic_step_normal" />

        <TextView
            android:id="@+id/text_step_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/step_3"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ic_step_3"
            app:layout_constraintStart_toStartOf="@+id/ic_step_3"
            app:layout_constraintTop_toBottomOf="@+id/ic_step_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>