<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <import type="com.iitp.signage.Step" />

        <import type="com.iitp.saltlux_talkbot.util.NetworkStatus" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.iitp.signage.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale_grey">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_main" />

        <androidx.cardview.widget.CardView
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:cardCornerRadius="4.5dp"
            app:cardElevation="4dp"
            app:layout_constraintDimensionRatio="4.615"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1"
                    app:layout_constraintHeight_percent="0.45"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/vital_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/premier_league"
                    android:text="@string/vital_sign"
                    android:textColor="@color/navy"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toTopOf="@+id/main_top_text"
                    app:layout_constraintStart_toEndOf="@+id/logo"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/main_top_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/main_top_text"
                    android:textColor="@color/black3"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/vital_sign"
                    app:layout_constraintTop_toBottomOf="@+id/vital_sign" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/button_back_to_start"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="30dp"
                    android:onClick="@{() -> viewModel.backToStart()}"
                    android:visibility="@{viewModel.step == Step.START ? View.GONE : View.VISIBLE}"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_exit" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/indicator_network_status"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="13dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_back_to_start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginEnd="30dp">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description"
                        android:src="@{viewModel.networkStatus == NetworkStatus.CONNECTED ? @drawable/ic_network_status_normal : @drawable/ic_network_status_disconnected}"
                        tools:src="@drawable/ic_network_status_normal" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/indicator_sensor_status"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="13dp"
                    android:visibility="gone"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/indicator_network_status"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/content_description"
                        android:src="@drawable/ic_sensor_status_normal" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.iitp.signage.view.StepView
            android:id="@+id/step_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="6"
            app:layout_constraintTop_toBottomOf="@+id/top_bar"
            app:step="@{viewModel.step}" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_view"
            app:navGraph="@navigation/nav_graph" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>